packages/kit/test/apps/basics/src/routes/errors/page-endpoint/get-explicit.js
export const get = () => ({
	status: 400,
	body: new Error('oops')
});
